# densitree

./: .buildinfo  .gitignore  404.html  CNAME  LICENSE  README.md  genindex.html  guide.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.doctrees/: guide.doctree  index.doctree
.doctrees/api/: plotting.doctree  result.doctree  spade.doctree  steps.doctree
.doctrees/benchmarks/: comparison.doctree  datasets.doctree  overview.doctree  results.doctree
.doctrees/getting-started/: installation.doctree  quickstart.doctree
.doctrees/method/: algorithm.doctree  improvements.doctree  references.doctree
.doctrees/tutorials/: comparing_conditions.doctree  flow_cytometry.doctree
.github/workflows/: ci.yml  release.yml
_modules/: index.html
_modules/densitree/: result.html  spade.html
_sources/benchmarks/: results.rst.txt
_sources/method/: improvements.rst.txt  references.rst.txt
_sources/tutorials/: comparing_conditions.rst.txt
_static/: custom.css
api/: plotting.html  result.html  spade.html  steps.html
api/plotting/: index.html
api/result/: index.html
api/spade/: index.html
api/steps/: index.html
assets/images/: tree_interactive.html
benchmarks/: compare_with_r.py  comparison.html  datasets.html  download_data.py  overview.html  results.html  run_benchmark.py
benchmarks/R/: README.md  run_flowsom.R  run_spade.R
benchmarks/comparison/: index.html
benchmarks/datasets/: index.html
benchmarks/overview/: index.html
benchmarks/results/: index.html  stability_20runs.json
densitree/: __init__.py  result.py  spade.py
densitree/plot/: matplotlib.py  plotly.py
densitree/steps/: __init__.py  base.py  cluster.py  density.py  downsample.py  mst.py  upsample.py
docs/: conf.py  guide.md  guide.rst  index.md  index.rst
docs/_static/: custom.css
docs/_templates/: fuzue-footer.html  layout.html  sidebar-globalnav.html
docs/api/: plotting.md  plotting.rst  result.md  result.rst  spade.md  spade.rst  steps.md  steps.rst
docs/benchmarks/: comparison.md  comparison.rst  datasets.md  (+4 more)
getting-started/: installation.html  quickstart.html
guide/: index.html
method/: algorithm.html  improvements.html  references.html
scripts/: generate_docs_plots.py
search/: search_index.json
tests/: test_plot_matplotlib.py  test_plot_plotly.py  test_result.py  test_spade.py
tutorials/: comparing_conditions.html  flow_cytometry.html
(+35 files in other folders)
