[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "densitree"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]
bench = ["readfcs>=2.0", "flowsom>=0.2", "leidenalg>=0.10", "igraph>=1.0", "tabulate"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
